# ade-engine

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
docs/: architecture.md  callable-contracts.md  release.md  settings.md
src/ade_engine/application/: engine.py  run_completion_report.py
src/ade_engine/application/pipeline/: detect_columns.py  pipeline.py
src/ade_engine/cli/: app.py
src/ade_engine/extensions/templates/config_packages/default/: pyproject.toml  settings.toml
src/ade_engine/infrastructure/: settings.py
src/ade_engine/infrastructure/io/: workbook.py
src/ade_engine/models/: __init__.py  errors.py  events.py  input_normalization.py  table.py
tests/integration/: test_input_normalization_formats.py  test_integration_xls_e2e.py
tests/unit/: test_input_event_schemas.py  test_main.py  test_pipeline_multi_table.py  test_run_completion_report.py  test_workbook_input_normalization.py  test_workbook_io.py
