[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ade-engine"
version = "1.7.9"
description = "Deterministic workbook normalization engine (detect → extract → map → normalize → render)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CLAC IT Team" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = [
  "openpyxl==3.1.5",
  "polars==1.36.1",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "typer==0.20.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "import-linter>=2.0",
  "pytest>=8.0",
  "twine>=6.0",
]

[project.scripts]
ade-engine = "ade_engine.cli.app:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ade_engine = [
  "py.typed",
  "extensions/templates/config_packages/default/**/*",
  "extensions/templates/config_packages/default/**",
  "extensions/templates/config_packages/default/*",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ade_engine*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "import-linter>=2.0",
  "pytest>=8.0",
  "twine>=6.0",
]
